fix(v2.4.0): Java 8兼容性修复
- MockCliDriverService: Map.of() → HashMap (Java 8不支持)
- TaskControllerTest: var → 显式类型 + 添加List import
- SseControllerTest: setTool/setInput → setToolName/setAction
- 添加.mvn/settings.xml使用阿里云镜像

测试结果: 26 tests passed

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>